--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 <body>
 <h2>New document</h2>
 <p>new change</p>
+<p class = "text">Производственные услуги – это те услуги, для которых необходимо рассчитывать себестоимость, для того чтобы правильно определить отпускную стоимость за их предоставление, а также для того чтобы иметь возможность корректировать эту стоимость, до полного расчета с клиентом. Пример производственных услуг – работа экскаватора (зарплата работникам, бензин, запчасти), реконструкция стадиона (зарплата работникам, материалы, бензин, оплата необходимых разрешений).
+
+Подробнее на: http://ultrabiznes.net/node/proizvodstvo-uslug-v-1s8-utp.html
+- компания Ультрабизнес</p>
+
 </body>
 </html>
