selectors in css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<h2>New document</h2>
-<p>new change</p>
-<p class = "text">Производственные услуги – это те услуги, для которых необходимо рассчитывать себестоимость, для того чтобы правильно определить отпускную стоимость за их предоставление, а также для того чтобы иметь возможность корректировать эту стоимость, до полного расчета с клиентом. Пример производственных услуг – работа экскаватора (зарплата работникам, бензин, запчасти), реконструкция стадиона (зарплата работникам, материалы, бензин, оплата необходимых разрешений).
-
-Подробнее на: http://ultrabiznes.net/node/proizvodstvo-uslug-v-1s8-utp.html
-- компания Ультрабизнес</p>
-
+<h1>Семья</h1>
+<div class = "parent"> Папа </div>
+<div class = "parent"> Мама 
+	<div class = "child"> Сын 
+		<div class = "child"> Внук </div>
+		<div class = "child"> Внучка 
+			<div class = "child"> Правнук </div>
+		</div>
+	</div>
+	<div class = "child"> Дочь </div>
+</div>
 </body>
 </html>
